2006-06-03  Karl Berry  <karl@gnu.org>

	* util/texi2dvi: always report tex command being used.

2006-06-02  Karl Berry  <karl@gnu.org>

	* util/texi2dvi (--src-specials): new option,
	requested by Charlie Zender.

2006-06-01  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\thischapternum): new macro for
	headings/footings, requested by Werner.
	* NEWS, doc/texinfo.txi (Command List, Custom Headings): document it.

2006-06-01  Sergey Poznyakoff  <gray@gnu.org.ua>

	* makeinfo/html.c (html_output_head): Insert external CSS
	reference if css_ref is set.
	(fix_filename): Attempt to transliterate the name before falling
	back to numeric symbol representation.
	* makeinfo/lang.c (iso8859_2_map): Add transliterations
	(koi8_map): New map for koi8-u and koi8-r encodings.
	(encoding_table): Add koi8-u and koi8-r
	(cm_search_iso_map_char,lang_transliterate_char): New functions.
	* makeinfo/lang.h (encoding_code_type): Add KOI8_R, KOI8_U
	(struct iso_map_type): New member `translit'.
	(lang_transliterate_char): New function prototype.
	* makeinfo/makeinfo.c: New options --css-ref and
	  --transliterate-file-names.
	* makeinfo/makeinfo.h (css_ref, transliterate_file_names): New
	variables.
	(URL_SAFE_CHAR): Bugfix: Make sure argument is in isalnum() domain.

	* doc/texinfo.txi: Document new options.

2006-05-30  <Ralf.Wildenhues@gmx.de>

	* configure.ac (sigblock): Fix underquoted macro usage.

2006-05-30  Akim Demaille  <akim@epita.fr>

	* util/texi2dvi (aux_file_p): Rename the second occurrence as...
	(bibaux_file_p): this.
	(run_bibtex): Use it.
	(options processing, $usage): Support --dvi for symmetry and to
	ease systematic tests.
	* util/bibtex.test: New.

2006-05-30  Akim Demaille  <akim@epita.fr>

	* util/texi2dvi: Add support for latex to text and info using
	hevea.
	Don't document it yet, as it's preliminary and on some regards
	incomplete.  It is usable though.
	(IFS): Use a more robust definition, taken from Autoconf.
	(bibaux_file_p): New, extracted from...