@@ -1,3 +1,7 @@
+2006-06-05  Akim Demaille  <akim@epita.fr>
+
+	* util/bibtex.test: Add it for real.
+
 2006-06-03  Karl Berry  <karl@gnu.org>
 
 	* util/texi2dvi: always report tex command being used.
